--- a/data/tasks.json
+++ b/data/tasks.json
@@ -4,5 +4,11 @@
     "assignee": "Ad rerum quis exerci",
     "status": "inprogress",
     "id": 1767725696573
+  },
+  {
+    "description": "mapping page",
+    "assignee": "Nishant Kumar",
+    "status": "todo",
+    "id": 1767768081720
   }
 ]
